--- a/library.desktop
+++ b/library.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=Library Manager
 Comment=Library Management System made using python3
-Exec=%install%/library
-Icon=%install%/res/icon.png
+Exec=installlibrary
+Icon=installres/icon.png
 Terminal=false
 Type=Application
 Categories=Application;Office;
